--- a/css/main.css
+++ b/css/main.css
@@ -1,632 +1,453 @@
-#wrap{width:100%;}
-/* 상단 */
-#header{
+
+body{
     width: 100%;
-    height:162px;
-
+    height: 100vh;
+    overflow: hidden;
+} 
+#wrap .box{
+    width: 100vw;
+    height: 1000px;
+    padding-top: 100px;
+    /* border: 1px solid #000; */
+    box-sizing: border-box;
 }
-#header_in{
-    margin: 0 auto;
-    width:1224px;
-    height: 162px;
+.btn{
+    position: fixed;
+    top: 50%;left: 50%;
+    z-index: 900;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-top:-150px;
+    background: url(../images/blue-tang-6768759_1280.jpg);   
+}
+.btn li{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    color: #fff;
+    font-size: 10px;
+    background-color: rgba(23, 81, 121, 0.61);
+    /* border: 1px solid #ccc; */
+    transition: all 0.5s;
+    box-sizing: border-box;
+}
+.main_btn{
+    position: absolute;
+    top: -20px; left:-30px ;
+}
+.info_btn{
+    position: absolute;
+    top: -20px;left: 180px;
+}
+.skill_btn{
+    position: absolute;
+        top: 80px;
+        left: -70px;
+}
+.project_btn{
+    position: absolute;
+        top: 80px;
+        left: 230px;
+}
+.thank_you{
+    position: absolute;
+    top: 170px;
+    left: -25px;}
 
+.contact_btn{
+    position: absolute;
+    top: 190px;
+    left: 150px;
 }
 
-#header_in .utill_bar{
-    width: 100%;
-    height: 88px;
-   line-height: 88px;
-
+.btn li:hover{
+    cursor:pointer;
+    
+    transform: scale(2);
 }
-
-#header_in .utill_left{
+/* 1번 박스 */
+.box1{
+    position: absolute;
+    top:0; left: 0;
+    position: relative;
+}
+.box1_in{
+    width: 1500px;
+    height: 530px;
+    position: absolute;
+    top: 150px; right: 0;
+    
+}
+.dot_area1{
     float: left;
-}
-
-#header_in .utill_left li{
-    float: left; 
-    padding-right: 5px;
-}
-
-#header_in .utill_left li::before{
-    content: '｜';
-    margin-right: 5px;
-    font-size: 14px;
-    color: #ccc;
-}
-#header_in .utill_left li:first-child::before{
-    padding-left: 0;
-    margin-right:0 ;
-    content: '';
-}
-
-#header_in .utill_left li a{
-    font-size: 14px;
-    font-weight: 700;
-    color: #666;
-}
-
-#header_in .utill_right{
-    float: right;
-}
-
-#header_in .utill_right li{
-    float:left;
-    padding-right:5px ;
-}
-
-#header_in .utill_right li::after{
-    content: '｜';
-    color: #ccc;
-    margin-left: 5px;
-}
-
-#header_in .utill_right li:last-child::after{
-    content: '';
-    margin-left: 0;
+    padding-left: 30px;
 
 }
-
-#header_in .utill_right li a{
-    font-size: 14px;
-    font-weight: 600;
-    color: #666;
+.dot{
+    width: 85px;
+    height: 572px;
+    display: flex;
+    flex-wrap: wrap-reverse;
 }
-
-#header_in .top_wrap{
-    width: 100%;
-    height:74px;
-
+.dot li{
+    width: 82px;
+    height: 82px;
+    border-radius:50%;
+  background-color: rgba(23, 81, 121, 0.61);
 }
-
-#header_in .top_wrap .logo{
-    clear: both;
-    float: left;}
-
-#header_in .top_wrap nav{
+.ttl_box{
+    margin:200px 0 0 0px;
     float: left;
-    margin-left: 216px;
-    width: 600px;
-    height:34px ;
+    width: 465px;
+    height: 144px;
+  
+}
+.name{
+    font-size: 50px;
 
 }
-#header_in .top_wrap nav li{
-    float: left;
-    margin-left: 30px;
-    padding-right:30px ;}
-
-#header_in .top_wrap nav li a:hover{
-    text-decoration: underline;
-    color: #2090ff;
-}
-
-#header_in .top_wrap nav li:last-child{
-    padding-right:0px;
-}
-
-#header_in .top_wrap nav li a{
+.ttl_box  p{
+    margin-top:35px;
     font-size: 20px;
     font-weight: 700;
-    color: #000;}
-
-#header_in .top_wrap .btn_r{
+    color:#666;
+}
+.img_box1{
     float: right;
-    width: 80px;
-    height: 20px;
-
-}
-#header_in .top_wrap .btn_r01{
-    float: left;
-    width: 20px;
-    height: 20px;
-
-}
-
-#header_in .top_wrap .btn_r02{
-    float: right;
-    width: 20px;
-    height: 20px;
-
-}
-
-/* 메인 */
-#main{
-    width: 100%;
-    height: 462px;
- 
-}
-
-#main_in{
-    margin: 0 auto;
-    width: 1224px;
-    height: 462px;
-  
-}
-#main_in .main_img{
-    float: left;
-    width: 808px;
-    height: 462px;
-    border-radius: 7px;
+    width: 599px;
+    height: 530px;
     overflow: hidden;
-    background:url(../imges/p_img_1616x924.png);
-    background-size: 100%;
+    background-image: 100%;
+    border-radius:  20% 0 0 0;
+    background:url(../images/mainimg01.png);
 }
-#main_in .main_img h3{
-    margin:66px 0 0 52px;
-    font-size: 36px;
-    color: #fff;
-
-}
-#main_in .main_img p{
-    margin:17px 0 0 52px;
-    font-size: 16px;
-    color: #fff;
-}
-
-#main_in .main_login_tap{
-    float: right;
-    width: 392px;
-    height: 462px;
-    border-radius: 7px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-}
-#main_in .login_tap_in{
-    margin: 0 auto;
-    margin-top: 15px;
-    width: 358px;
-    height: 420px;
+/* 2번 박스 */
+.box2{
+    position: absolute;
+    top: 0; left:100%;
  
 }
-#main_in .login_tap_in .ui_tap{
+.dot_area2{
+    float: right;
+    padding-right: 30px;
+}
+.box2_in{
+    width: 90vw;
+    height: 530px;
+    border: 2px solid #ccc;
+    position: absolute;
+    top: 150px; left:0px;  
+}
+.profile_img{
     float: left;
-    width: 356px;
-    height: 49px;
-    border-bottom: 1px solid #ccc;
-}
-
-#main_in .login_tap_in .ui_tap li{
-    float: left;
-    line-height: 49px;
-    margin-left:15px;
-    padding-right: 15px;}
-#main_in .login_tap_in .ui_tap li a{
-    font-size: 14px; 
-    color: #666;
-    font-weight: 700;
-}
-#main_in .login_tap_in .app{
-    margin: 0 auto;
-    padding-top: 30px;
-    width: 326px;
-    height: 168px;
-    text-align: center;
-  
-}
-#main_in .login_tap_in .app img{
-    margin-bottom: 12px;
-    padding-top: 30px;
-    width: 48px;
-    height: 48px;
-}
-#main_in .login_tap_in .app p{
-    font-size: 16px;
-    color: #000;
-    font-weight: 700;
-}
-
-#main_in .login_tap_in .login_b_wrap{
-    margin: 0 auto;
-    margin-top: 10px;
-    width: 326px;
-    height: 117px;
-    border-bottom: 1px solid #ccc;
-   
-}
-#main_in .login_tap_in .login_b_wrap button{
-    width: 326px;
-    height: 52px;
-    border: 0;
-    border-radius:7px;
-    background-color: #2090ff;
-   
-}
-#main_in .login_tap_in .login_b_wrap button a{
-    color: #fff;
-}
-
-#main_in .login_tap_in .login_b_wrap ul{
-    padding-top: 29px;
-    box-sizing: border-box;}
-#main_in .login_tap_in .login_b_wrap ul li{
-    float: left;
-    margin-right: 160px;
-}
-#main_in .login_tap_in .login_b_wrap ul li:last-child{
-    margin-right: 0;
-}
-#main_in .login_tap_in .login_b_wrap ul li a{
-    font-size: 14px;
-    font-weight: 700;
-    color: #666;
-}
-#main_in .login_tap_in .button_ul{
-    clear: both;
-    margin-top: 20px;
-    width: 390px;
-    height: 76px;
-   
-
-}
-#main_in .login_tap_in .button_ul li{
-    float: left;
-    text-align: center;
-    
-}
-#main_in .login_tap_in .button_ul li a{
-    display: block;
-    font-size: 14px;
-    text-align: center;
-    padding: 0 20px;
-}
-/* display:flex */
-/* #main_in .login_tap_in .button_ul li::after{
-color: #ccc;} */
-#main_in .login_tap_in .button_ul li img{
-    width: 24px;height: 24px; margin-bottom:8px ;
-}
-#main_in .login_tap_in .button_ul li p{
-    margin-top: 10px;
-    font-size: 14px;
-    color: #000;
-    font-weight: 700;
-}
-#main_in .login_tap_in .button_ul li::before{
-    float: left;
-    content: '｜';
-    color: #ccc;
-    
-    position: relative;
-    top:45px;
-}
- #main_in .login_tap_in .button_ul li:first-child::before{ 
-    content: '';
-    
-} 
-
-/* 컨텐츠 */
-#con{
-    width: 100%;
-    height: 1978px;
-    padding-top: 45px;
-    box-sizing: border-box;
+    width: 272px;
+    height: 282px;
+    margin: 75px 0 0 120px;
     background-color: turquoise;
 }
-
-#con .my_card{
-    margin: 0 auto;
-    width: 1224px;
-    height: 465px;
-    border: 1px solid #ccc;
-    border-radius: 7px;
-  
-}
-#con .my_card_in{
-    margin: 0 auto;
-    margin-top: 32px;
-    width: 1191px;
-    height:415px;
-}
-#con .my_card .my_card_h{
-    width: 1191px;
-    height: 20px;
-  
-}
-
-#con .my_card .my_card_h .ui_tap{
-    float: left;
-}
-#con .my_card .my_card_h .ui_tap li{
-    float: left;
-    margin-right:10px ;
-    
-}
-#con .my_card .my_card_h .ui_tap li::after{
-    content: '｜';
-    font-size: 16px;
-    color: #ccc;
-    padding-left: 10px;
-}
-#con .my_card .my_card_h .ui_tap li:last-child:after{
-    content: '';
-    padding-left:0px ;
-}
-#con .my_card .my_card_h .ui_tap li a{
-    font-size: 16px;
-    font-weight: 700;
-    color: #666;
-}
-
-#con .my_card .my_card_h .ui_tap_right{
+.ttl_box2{
     float: right;
+    margin: 40px 60px 0 0;
+    width: 599px;
+    height: 413px;
 }
-#con .my_card .my_card_h .ui_tap_right li{
-    margin-right: 10px;
+.sub_ttl{
+    margin:30px 0 0 95px;
+    font-size:50px;
+    color:#666;
+}
+.box2_in h3{
+    margin:20px 0 0 120px;
+    font-size:30px;
+    color: #111;
+}
+.box2_in p{
+    margin:20px 0 0 120px;
+    font-size:16px;
+    color: #111;
+} 
+.img_box2{ 
     float: left;
-   padding: 3px 15px;
-    border-radius: 20px;
-    background-color: #ccc;
-    text-align: center;
-}
-#con .my_card .my_card_h .ui_tap_right li a{
-    font-size: 14px;
-    font-weight: 700;
-    color: #000;
-}
-#con .my_card .my_card_b{
-    width: 1191px;
-    height: 320px;
-   margin-top: 30px;
-   position: relative;
-    
-}
-#con .my_card .my_card_b .card_slide{
-    margin: 0 auto;
-    width: 1056px;
-    height: 320px;
-    position: relative;
-   
-}
-#con .my_card .my_card_b .card_slide li{
-    float: left;
-    margin-right: 23px;
-    padding-left: 23px;
-    width: 173px;
-    height: 320px;
-    text-align: center;
-   
-}
-#con .my_card .my_card_b .card_slide li:last-child{
-    margin-right: 0;
-    padding-left: 0;
-}
-#con .my_card .my_card_b .card_slide li img{
-    padding-top: 31px;
-    width: 120px;
-    height:190px;
-}
-#con .my_card .my_card_b .card_slide li h4{
-    margin-top: 10px;
-    font-size: 16px;
-    color: #000;
-}
-#con .my_card .my_card_b .card_slide li p{
-    margin: 20px;
-    font-size: 14px;
-    font-weight: 700;
-    color: #666;
-}
-#con .my_card .my_card_b button{
-    border: 0;
-}
-#con .my_card .my_card_b .btn_left{
-    width: 32px;
-    height: 26px;
+    width: 599px;
+    height: 530px;
+    overflow: hidden;
+    background-image: 100%;
+    border-radius:  0 20% 0 0;
+    background:url(../images/mainimg01.png);}
+
+
+/* 3번 박스 */
+.box3{
     position: absolute;
-    top:170px;
-    left:0;
+    top: 100%; left: 0;
 }
-#con .my_card .my_card_b .btn_right{
-    width:32px ;
-    height:26px ;
+.dot_area3{
+    float: left;
+    padding-left: 30px;
+}
+.box3_in{
+    width: 90vw;
+    height: 530px;
+    display: flex;
     position: absolute;
-    top:170px;
-    right:0;
-}
-/* 2번 컨텐츠 */
-#con .my_mid{
-    margin: 0 auto;
-    margin-top: 25px;
-    width: 1224px;
-    height: 274px;
+    top: 150px; right:0;
    
 }
-#con .my_mid>div{
-    width: 600px;
-    height: 274px;
-    border-radius: 7px;
+.skill_bar{
     
-}
-#con .my_mid .mid_left{
-    float: left;
-    padding: 23px 30px;
-    box-sizing: border-box;
-    position: relative;
-    background-color: rgb(220,242,254);
-}
-#con .my_mid .mid_left h5{
-    
-    font-size: 16px;
-    font-weight: 700;
-    color: #000;
-}
-#con .my_mid .mid_left h5::after{
-    content: '>';
-    padding-left: 10px;
-}
-#con .my_mid .mid_left h3{
-    margin-top: 32px;
-    font-size: 24px;
-    color: #000;
-}
-#con .my_mid .mid_left p{
-    margin-top: 8px;
-    font-size: 16px;
-    font-weight: 700;
-    color: #666;
-}
-#con .my_mid .mid_left img{
-   position: absolute;
-   top: 0;right: 0;
-    width: 202px;
-    height: 274px;
+    width: 700px;
+    height: 474px;
  
 }
-#con .my_mid .mid_right{
-    float: right;
-    border: 1px solid #ccc;
-    padding: 23px 30px;
-    box-sizing: border-box;
+.skill_list{
+    margin-left: 60px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    width: 470px;
+    height: 474px;}
+.skill_list li>div{
+    width: 41px;
+    height: 427px;
+    border: 3px solid #ccc;
+    overflow: hidden;
     position: relative;
 }
-#con .my_mid .mid_right h5 {
-
-    font-size: 16px;
-    font-weight: 700;
-    color: #000;
-}
-
-#con .my_mid .mid_right h5::after {
-    content: '>';
-    padding-left: 10px;
-}
-
-#con .my_mid .mid_right h3 {
-    margin-top: 32px;
-    font-size: 24px;
-    color: #000;
-}
-
-#con .my_mid .mid_right .ttx1{
-    margin-top: 8px;
-    font-size: 16px;
-    font-weight: 700;
-    color: #000;
-}
-#con .my_mid .mid_right .ttx2{
-    margin-top: 8px;
-    font-size: 16px;
-    font-weight: 700;
-}
-#con .my_mid .mid_right h4{
-    margin-top: 60px;
-    font-size: 24px;
-    color: #000;
-}
-#con .my_mid .mid_right .imgbox{
+.skill_list li>div>.list{
+    width: 41px;
+    height: 300px;
+    background-color: steelblue;
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 202px;
-    height: 274px;
-    text-align: center;
-    
+    top:500px;left:0 ;
 }
-#con .my_mid .mid_right .imgbox>img{
-    margin-top:65px ;
-    width: 166px;
-    height: 144px;
-
-}
-/* 컨텐츠3 */
-#con .my_event{
-    margin: 0 auto;
-    margin-top: 25px;
-    width: 1224px;
-    height: 904px;
-
-    background-color: slateblue;
-}
-#con .my_event .eve_wrap{
-    float: left;
-    width: 808px;
-    height: 904px;
-    background-color: teal;
-}
-#con .my_event .eve_wrap .eve_tap_area{
-    width: 808px;
-    height:514px;
-    background-color: yellowgreen;
-
-}
-/* position:fixed; */
-#con .my_event .eve_tap_h{
-    width: 808px;
-    height: 450px;
-    background-color: lightskyblue;
-}
-#con .my_event .eve_tap_h li{
-    float: left;
-    margin-right: 27px;
-    text-align: center;
-    border-radius: 7px;
-    overflow: hidden;
-    width: 251px;
-    height: 450px;
-    background-color: rgb(202, 166, 166);
-}
-#con .my_event .eve_tap_h li:last-child{
-    margin-right: 0;
-}
-#con .my_event .eve_tap_h li div{
-    width: 100%;
-    height: 302px;
-    
-    background-color: #2090ff;
-}
-#con .my_event .eve_tap_h li div>img{
-    margin-top:46px;
-}
-#con .my_event .eve_tap_h li h3{
-    margin-top: 27px;
-    font-size: 16px;
-    color: #000;
-}
-#con .my_event .eve_tap_h li p{
-    margin-top: 10px;
-    font-size: 14px;
-    font-weight: 700;
-}
-#con .my_event .eve_tap_b{
-    margin-top: 24px;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 7px;
-    width: 808px;
-    height: 40px;
-    background-color: rgb(32, 63, 75);
-}
-#con .my_event .right_box{
-    float: right;
-    width: 392px;
-    height: 904px;
-    background-color: thistle;
-}
-#con .my_event .right_box .eve_right{}
-#con .my_event .right_box .eve_right li{
-    margin-top: 28px;
-    width: 392px;
-    height: 205px;
-    background-color: royalblue;
-}
-
-#con .my_event .right_box .eve_right li:first-child{
-    margin-top: 0;
-}
-#con .con4{
-    margin: 0 auto;
-    margin-top: 25px;
-    width: 1224px;
-    height: 162px;
-    background-color: sandybrown;
-}
-
-
-/* 하단 */
-#footer{
-    padding-top: 45px;
+.anoter_skill{
+    margin: 400px 0 0 100px;
+    padding: 0 0 0 10px;
     box-sizing: border-box;
-    width: 100%;
-    height: 295px;
-    background-color: seagreen;
+    width: 500px;
+    height: 56px;
+    
+}
+.anoter_skill h4{
+    font-size: 15px;
+    padding: 0 0 10px 20px;
+}
+.anoter_skill ul li{
+    float: left;
+    margin-left: 10px;
+    border-radius:9px ;
+    padding: 5px 10px 5px;
+    background-color: steelblue;
+    color: #fff;
+    font-size: 8px;
+}
+.img_box3{ 
+    margin-left: 300px;
+    width: 599px;
+    height: 530px;
+    overflow: hidden;
+    background-image: 100%;
+    border-radius:  0 0 0 0;
+    background:url(../images/mainimg01.png);}
+
+/* 4번 박스 */
+.box4{
+    position: absolute;
+    top: 100%; left: 100%;
+}
+.box4_in{
+    width: 100vw;
+    height:530px;
+    display: flex;
+    /* border: 3px solid #ccc; */
+    position: absolute;
+    top: 150px; left:0 ;
+   
+}
+.img_box4{ 
+    width: 599px;
+    height: 530px;
+    overflow: hidden;
+    background-image: 100%;
+    border-radius:  0 0 0 0;
+    background:url(../images/mainimg01.png);}
+.txt_box{
+    width: 500px;
+}    
+.txt_box h4 {
+    padding-left: 30px;
+    font-size: 50px;
+}
+
+.sub_box{
+    box-sizing: border-box;
+    padding: 30px 30px 0 30px;
+    width: 500px;
+   }
+
+.sub_box h5 {
+    font-size: 12px;
+}
+
+.sub_box p {
+    font-size: 12px;
+}
+
+.sub_box span {
+    font-size: 12px;
+    margin: 0;
+}
+.slider{
+    margin: 30px 0 0 420px;
+    width: 919px;
+    height: 377px;
+    overflow: hidden;
+    position: relative;
+}
+.veiw{
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 0px; left: 0;
+    width: 1000px;
+    height:377px;
+   
+}
+.slide{
+    width: 311px;
+    height: 377px;
+    border-radius: 7px;
+}
+.project_box1{
+    /* position: absolute;
+    top: 40px; left: 100px; */
+    background-color: slategray;
+} 
+.project_box2{
+    /* position: absolute;
+    top: 40px; left: 450px; */
+    background-color: rgb(79, 127, 175);
+}
+.project_box3{
+    /* position: absolute;
+    top: 40px; left: 800px; */
+    background-color: rgb(149, 184, 219);
+}
+.slider_btn li{
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+    
+}
+.btn1{
+    z-index: 400;
+    position: absolute;
+    top: 430px; right: 650px;
+}
+.btn2{
+    z-index: 400;
+    position: absolute;
+    top: 430px; right: 250px;
+}
+.btn3{
+    z-index: 400;
+    position: absolute;
+    top:530px; right:50px;}
+
+
+
+/* 5번 박스 */
+.box5{
+    position: absolute;
+    top: 200%; left: 0;
+}
+.dot_area5{
+    float: left;
+    padding-left: 30px;
+}
+.box5_in{
+    width: 100vw;
+    height:530px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 150px; left:0 ;
+    
+}
+.thank{
+    position: absolute;
+    top: 150px; left: 10vw;
+    z-index: 700;
+    font-size:144px;
+    color: rgb(23, 23, 99);
+}
+.img_in{
+    position: absolute;
+    top: 150px; left: 10vw;
+    width: 500px;
+    height: 230px;
+    position: relative;
+}
+.img_in li{
+    width: 240px;
+    height: 240px;
+    border-radius:50% ;
+    opacity: 0.5;
+    background-color: steelblue;
+}
+.con1{
+    position: absolute;
+    top: 0; left: 0;
+}
+.con2{
+    position:absolute;
+    top: 0; left: 150px;
+
+}
+.img_box5{ 
+    float: right;
+    width: 599px;
+    height: 530px;
+    overflow: hidden;
+    background-image: 100%;
+    border-radius:  0 0 0 20%;
+    background:url(../images/mainimg01.png);}
+/* 6번 박스 */
+.box6{
+    position: absolute;
+    top: 200%; left: 100%;
+}
+.dot_area6{
+    float: right;
+    padding-right: 30px;
+}
+.box6_in{
+    width: 100vw;
+    height:530px;
+    display: flex;   
+    position: absolute;
+    top: 150px; left:0 ;
+}
+.img_box6{
+    width: 599px;
+    height: 530px;
+    overflow: hidden;
+    background-image: 100%;
+    border-radius:  0 0 20% 0;
+    background:url(../images/mainimg01.png);
+}
+.contact_box{
+margin-left: 30vw;
+padding: 10px 0 0 30px;
+box-sizing: border-box;
+width: 483px;
+height: 530px;
+border: 2px solid #ccc;
+}
+.contact_ttl{
+    font-size: 50px;
+    color: #666;
 }
