--- a/css/reset.css
+++ b/css/reset.css
@@ -1,10 +1,3 @@
-*{margin: 0; padding: 0;}
-body{
-    margin: 0; padding: 0;
-    font-size: 12px;
-    font-family: '맑은 고딕';
-    color: #555;
-}
-a{text-decoration: none; color: #555;}
+*{margin:0 ; padding:0;}
 ul,li{list-style: none;}
-img{border: 0;}
+a{text-decoration: none;}
